--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,8 +3,8 @@ $link-color: #25658e;
 $light-gray: #dedede;
 $dark-gray: #525252;
 
-$logo-width: 150px;
-$logo-height: 80px;
+$header-padding-top-bottom: 20px;
+$header-padding-left-right: 20px;
 
 $footer-height: 45px;
 
